Added Meta Content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,39 @@
 <div class="jumbotron jumbotron-fluid mb-0 mt-0">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-4 text-xs-left">
+			<div class="col-sm-3 text-xs-left">
+				<h6>MAYA Foundation</h6>
+				<p>  
+					910 S. Harrison St.
+					<br>Richmond, VA 23220
+				</p>
 			</div>
-			<div class="col-sm-4 text-xs-center">
+			<div class="col-sm-6 text-xs-center">
+				<h6 class="text-muted">Our Biggest Supporters</h6>		
+				<div class="card-group">
+					<div class="card">
+						<a href="http://martinsfoods.com/" target="_blank">
+							<img class="card-img-top img-fluid rounded" src="/media/supporters/martins.jpg">
+						</a>
+					</div>
+					<div class="card">
+						<a href="http://photographybycandice.blogspot.com/" target="_blank">
+							<img class="card-img-top img-fluid rounded" src="/media/supporters/candice-patrice-photography.jpg">
+						</a>
+					</div>
+					<div class="card">
+						<a href="http://walmart.com" target="_blank">
+							<img class="card-img-top img-fluid rounded" src="/media/supporters/walmart.jpg">
+						</a>
+					</div>
+				</div>
 			</div>
-			<div class="col-sm-4 text-xs-right">
+			<div class="col-sm-3 text-xs-right">
+				<p>  
+					<strong>E-mail</strong>: <a href="mailto:info@maya.foundation">info@maya.foundation</a>
+					<br><strong>Telephone</strong>: (804) 305-1697
+					<br><strong>Fax</strong>: (804) 612-0321
+				</p>
 			</div>
 		</div>
 	</div>
