Added social metadata

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -7,3 +7,16 @@
 <meta name="apple-mobile-web-app-title" content="MAYA Foundation">
 <meta name="application-name" content="MAYA Foundation">
 <meta name="theme-color" content="#ffffff">
+<link rel="image_src" href="/media/share-social.png" / >
+<meta name="description" content="We provide students from various backgrounds the opportunity to achieve their goals." />
+<meta property="og:title" content="MAYA Foundation" />
+<meta property="og:type" content="article" />
+<meta property="og:image" content="http://maya.foundation/media/share-social.png" />
+<meta property="og:url" content="http://maya.foundation" />
+<meta property="og:description" content="We provide students from various backgrounds the opportunity to achieve their goals." />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="MAYA Foundation" />
+<meta name="twitter:site" content="@mayagives">
+<meta name="twitter:creator" content="@hornetbrittany">
+<meta name="twitter:description" content="We provide students from various backgrounds the opportunity to achieve their goals." />
+<meta name="twitter:image" content="http://maya.foundation/media/share-social.png" />
