--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -7,11 +7,11 @@
 <meta name="apple-mobile-web-app-title" content="MAYA Foundation">
 <meta name="application-name" content="MAYA Foundation">
 <meta name="theme-color" content="#ffffff">
-<link rel="image_src" href="/media/share-social.png" / >
+<link rel="image_src" href="/media/share-social.jpg" / >
 <meta name="description" content="We provide students from various backgrounds the opportunity to achieve their goals." />
 <meta property="og:title" content="MAYA Foundation" />
 <meta property="og:type" content="article" />
-<meta property="og:image" content="http://maya.foundation/media/share-social.png" />
+<meta property="og:image" content="http://maya.foundation/media/share-social.jpg" />
 <meta property="og:url" content="http://maya.foundation" />
 <meta property="og:description" content="We provide students from various backgrounds the opportunity to achieve their goals." />
 <meta name="twitter:card" content="summary_large_image" />
@@ -19,4 +19,4 @@
 <meta name="twitter:site" content="@mayagives">
 <meta name="twitter:creator" content="@hornetbrittany">
 <meta name="twitter:description" content="We provide students from various backgrounds the opportunity to achieve their goals." />
-<meta name="twitter:image" content="http://maya.foundation/media/share-social.png" />
+<meta name="twitter:image" content="http://maya.foundation/media/share-social.jpg" />
