Updated background colors and logo

--- a/_includes/navigation-other.html
+++ b/_includes/navigation-other.html
@@ -1,7 +1,6 @@
-<hr />
-<nav class="navbar navbar-light text-xs-center">
+<nav class="navbar navbar-light text-xs-center pb-0 pt-1">
     <a class="navbar-brand" href="#">
-        <img src="/media/logo-small.png" height="30" width="30" class="img-fluid" alt="">
+        <img src="/media/logo-small.png" height="80" width="80" class="img-fluid" alt="">
     </a>
     {% include navigation-links.html %}
 </nav>
