--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
   	<link rel="stylesheet" href="/css/style.css">
 	{% include meta.html %}
 </head>
-<body>
-  	<div class="container">
+<body class="bg-gold">
+  	<div class="container bg-faded rounded pb-3 px-2">
     	{{content}}
 	</div>
 	<footer class="mt-3">
