--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,11 @@
 .navbar .navbar-collapse {
   text-align: center;
 }
+
+.bg-white {
+  background-color: #FFFFFF;
+}
+
+.bg-gold {
+  background-color: #BD8D46;
+}
