--- a/_includes/navigation-links.html
+++ b/_includes/navigation-links.html
@@ -3,6 +3,9 @@
 		<a class="nav-link" href="/">Home</a>
 	</li>
 	<li class="nav-item">
+		<a class="nav-link" href="/events/">Events</a>
+	</li>
+	<li class="nav-item">
 		<a class="nav-link" href="/mentoring/">Mentoring</a>
 	</li>
 	<li class="nav-item">
