--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-fixed-bottom jumbotron jumbotron-fluid mb-0 mt-0">
+<div class="jumbotron jumbotron-fluid mb-0 mt-0">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-3 text-xs-left">
