--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   	<div class="container bg-faded rounded pb-3 px-2">
     	{{content}}
 	</div>
-	<footer class="navbar navbar-fixed-bottom mt-3">
+	<footer class="mt-3">
 		{% include footer.html %}
 	</footer>
 </body>
