--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,19 @@
 .bg-gold {
   background-color: #BD8D46;
 }
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 215px;
+}
