--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,9 +27,11 @@
 						</a>
 					</div>
 				</div>
-				<small class="text-muted mb-2">
-					"<a rel="nofollow" href="https://thenounproject.com/term/donation/196653/" target="_blank">Donation Icon</a>" by <a rel="nofollow" href="https://thenounproject.com/gilbertbages/" target="_blank">Gilbert Bages</a> is licensed under <a rel="nofollow" href="https://creativecommons.org/licenses/by/3.0/us/" target="_blank">CC BY 3.0</a>
-				</small>
+				<p class="text-muted mb-2">
+					<small>
+						"<a rel="nofollow" href="https://thenounproject.com/term/donation/196653/" target="_blank">Donation Icon</a>" by <a rel="nofollow" href="https://thenounproject.com/gilbertbages/" target="_blank">Gilbert Bages</a> is licensed under <a rel="nofollow" href="https://creativecommons.org/licenses/by/3.0/us/" target="_blank">CC BY 3.0</a>
+					</small>
+				</p>
 			</div>
 			<div class="col-sm-3 text-xs-center text-sm-right">
 				<p>  
