--- a/_includes/navigation-links.html
+++ b/_includes/navigation-links.html
@@ -15,6 +15,9 @@
 		<a class="nav-link" href="/about/">About</a>
 	</li>
 	<li class="nav-item">
+		<a class="nav-link" href="/supporters/">Supporters</a>
+	</li>
+	<li class="nav-item">
 		<a class="nav-link" href="/contact/">Contact</a>
 	</li>
 </ul>
