Updated to Bootstrap 6

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,21 @@
-<div class="jumbotron jumbotron-fluid mb-0 mt-0">
+<div class="bg-faded px-3 py-5">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-3 text-xs-center text-sm-left">
+			<div class="col-sm-3 text-center text-sm-left">
 				<h6>MAYA Foundation</h6>
 				<p>  
 					910 S. Harrison St.
 					<br>Richmond, VA 23220
 				</p>
 			</div>
-			<div class="col-sm-6 text-xs-center">
+			<div class="col-sm-6 text-center">
 				<p class="text-muted mb-2">
 					<small>
 						"<a rel="nofollow" href="https://thenounproject.com/term/donation/196653/" target="_blank">Donation Icon</a>" by <a rel="nofollow" href="https://thenounproject.com/gilbertbages/" target="_blank">Gilbert Bages</a> is licensed under <a rel="nofollow" href="https://creativecommons.org/licenses/by/3.0/us/" target="_blank">CC BY 3.0</a>
 					</small>
 				</p>
 			</div>
-			<div class="col-sm-3 text-xs-center text-sm-right">
+			<div class="col-sm-3 text-center text-sm-right">
 				<p>  
 					<strong>E-mail</strong>: <a href="mailto:info@maya.foundation">info@maya.foundation</a>
 					<br><strong>Telephone</strong>: (804) 305-1697
