--- a/_includes/navigation-home.html
+++ b/_includes/navigation-home.html
@@ -1,6 +1,6 @@
 <img src="/media/logo.png" class="img-fluid mx-auto d-block" />
 <hr />
-<nav class="navbar navbar-light text-xs-center">
+<nav class="navbar navbar-notoggle navbar-light">
 	{% include navigation-links.html %}
 </nav>
 <hr />
