--- a/_includes/navigation-links.html
+++ b/_includes/navigation-links.html
@@ -1,4 +1,4 @@
-<ul class="nav navbar-nav">
+<ul class="navbar-nav mx-auto">
 	<li class="nav-item">
 		<a class="nav-link" href="/">Home</a>
 	</li>
