--- a/_includes/navigation-other.html
+++ b/_includes/navigation-other.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light text-xs-center pb-0 pt-1">
+<nav class="navbar navbar-notoggle navbar-light pb-0 pt-1">
     <a class="navbar-brand" href="#">
         <img src="/media/logo-small.png" height="80" width="80" class="img-fluid" alt="">
     </a>
