--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,5 +3,7 @@ layout: default
 ---
 
 {% include navigation-other.html %}
-<h2 class="display-2 mt-2 mb-3">{{page.title}}</h2>
-{{content}}
+<div class="px-4">
+    <h2 class="display-2 mt-2 mb-3">{{page.title}}</h2>
+    {{content}}
+</div>
