--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,35 @@
-.navbar .navbar-nav {
-  display: inline-block;
-  float: none;
-  vertical-align: top;
+.navbar-notoggle {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-direction: row;
+    -ms-flex-wrap: nowrap;
+    -ms-flex-align: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
 }
 
-.navbar .navbar-collapse {
-  text-align: center;
+.navbar-notoggle .navbar-nav {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -webkit-justify-content: center;
+    -ms-justify-content: center;
+    -ms-flex-direction: row;
+    -ms-flex-wrap: wrap;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.navbar-notoggle .navbar-nav .nav-link {
+    padding-right: .5rem;
+    padding-left: .5rem;
 }
 
 .bg-white {
@@ -16,20 +40,12 @@
   background-color: #BD8D46;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 265px;
+.sticky-base {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 .sticky-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 215px;
+  flex: 1;
 }
